# tabletail

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RECORDING.md  generate_assets.py  generate_diagrams.py
examples/: demo.sh  docker-compose.yml  seed.sql
src/tabletail/: __init__.py  cli.py  connection.py  diff.py  models.py  render.py  tail_poll.py  tail_wal.py
tests/: conftest.py  test_cli.py  test_diff.py  test_tail_poll.py  test_tail_wal.py
